--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <section id="map-container" role="application">
       <div id="map"></div>
     </section>
-    <section>
+
+    <section id="filter-content">
       <div class="filter-options" >
         <h2>Filter Results</h2>
         <div class="select-form-field">
@@ -38,7 +39,7 @@
     </section>
   </main>
   <script type="application/javascript" charset="utf-8" src="js/secrets.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/registerSW.js"></script>
+  <!-- <script type="application/javascript" charset="utf-8" src="js/registerSW.js"></script> -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
