--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </header>
 
   <main id="maincontent" role="main">
-    <section id="map-container" role="application">
-      <div id="map"></div>
+    <section id="map-container">
+      <div id="map" role="application"></div>
     </section>
 
     <section id="filter-content">
@@ -38,6 +38,8 @@
       <ul id="restaurants-list" role="navigation"></ul>
     </section>
   </main>
+
+  <!-- secrets.js file is included in .gitignore. It contains a const mapboxToken (with personal mapbox token), which is used in main.js and restaurant.js -->
   <script type="application/javascript" charset="utf-8" src="js/secrets.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/registerSW.js"></script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
